Project: 자바 버전을 17 -> 11로 내림
- 스프링 버전도 3.4.0 -> 2.6.7로 내림
- 스카우터로 모니터링을 실행하는데 톰캣쪽이 모니터링이 안됨
- 자바의 버전을 내리니까 톰캣 모니터링 가능해짐