@@ -7,6 +7,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class SynchronizedCouponIssuer implements CouponIssuer {
@@ -30,7 +31,7 @@ public class SynchronizedCouponIssuer implements CouponIssuer {
             }
             return memberIds.stream()
                     .map(Coupon::new)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         List<Coupon> coupons = new ArrayList<>();
