@@ -12,6 +12,7 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -369,7 +370,7 @@ class SynchronizedWaitingQueueTest {
                             } catch (Exception e) {
                                 return null;
                             }
-                        }).toList();
+                        }).collect(Collectors.toList());
 
         assertThat(result).hasSize(threadCount)
                 .containsOnlyOnce(Boolean.TRUE)
